Write output from unittest to file